--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -46,7 +46,7 @@
 <body>
     <h1>Temperature Monitor</h1>
     <div>
-        Temperature: <span id="temperature">--</span> °C
+        Temperature: <span id="temperature">--</span> 
     </div>
 
     <!-- JavaScript for AJAX polling -->
@@ -55,7 +55,7 @@
             fetch('/api/latest-temperature/')
             .then(response => response.json())
             .then(data => {
-                document.getElementById('temperature').innerText = data.temperature;
+                document.getElementById('temperature').innerText = data.temperature + ' °C';
             });
         }
 
